rss feed api implemented on csr news

--- a/donate-using-qr-code.html
+++ b/donate-using-qr-code.html
@@ -125,7 +125,7 @@
                               <a href="#">Team</a>
                         </li>
                         <li>
-                              <a href="#">Braj News</a>
+                              <a href="csr-news.html">CSR News</a>
                         </li>
                         <li>
                               <a href="#">Success Stories</a>
