gateway mail implement and some changes done.

--- a/contact.html
+++ b/contact.html
@@ -150,7 +150,7 @@
                         <i class="fa fa-map-o"></i>
                         <div class="media-body">
                             <h3>Location</h3>
-                            <p>Sri Krishna greens<br> F-104<br> Vridavan, Mathura<br> Uttar Pradesh<br> 281121</p>
+                            <p>Sri Krishna greens<br> Vridavan, Mathura<br> Uttar Pradesh<br> 281121</p>
                         </div>
                     </div>
                     <!-- Phone -->
@@ -247,7 +247,7 @@
             <ul class="location-link">
               <li class="item">
                 <i class="fa fa-map-marker"></i>
-                <p>Sri Krishna greens<br> F-104<br> Vridavan, Mathura<br> Uttar Pradesh<br> 281121</p>
+                <p>Sri Krishna greens<br> Vridavan, Mathura<br> Uttar Pradesh<br> 281121</p>
               </li>
               <li class="item">
                 <i class="fa fa-envelope-o" aria-hidden="true"></i>
@@ -289,7 +289,7 @@
             </li>
             <li>
               <a href="rural_devlopment.html">
-                <i class="fa fa-angle-right" aria-hidden="true"></i>Rural development and Preserving Old Heritage</a>
+                <i class="fa fa-angle-right" aria-hidden="true"></i>Water and Sanitation and Rural Development</a>
             </li>
           </ul>
         </div>
