--- a/donate-using-qr-code.html
+++ b/donate-using-qr-code.html
@@ -350,7 +350,7 @@
             <ul class="location-link">
               <li class="item">
                 <i class="fa fa-map-marker"></i>
-                <p>Sri Krishna greens<br> F-104<br> Vridavan, Mathura<br> Uttar Pradesh<br> 281121</p>
+                <p>Sri Krishna greens<br> Vridavan, Mathura<br> Uttar Pradesh<br> 281121</p>
               </li>
               <li class="item">
                 <i class="fa fa-envelope-o" aria-hidden="true"></i>
@@ -392,7 +392,7 @@
             </li>
             <li>
               <a href="rural_devlopment.html">
-                <i class="fa fa-angle-right" aria-hidden="true"></i>Rural development and Preserving Old Heritage</a>
+                <i class="fa fa-angle-right" aria-hidden="true"></i>Water and Sanitation and Rural Development</a>
             </li>
           </ul>
         </div>
