website visitor implement and one ques add in faq

--- a/index.html
+++ b/index.html
@@ -882,7 +882,24 @@
                         If possible for you please be part of this nobel cause , and join our advisory commetee, so we can be blessed by your presence .
                     </div>  
                 </div>
-            </div>  
+            </div> 
+            
+            <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="headingFive">
+                    <h4 class="panel-title">
+                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false"
+                            aria-controls="collapseFive">
+                       Importance Of Braj?
+
+                        </a>
+                    </h4>
+                </div>
+                <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
+                    <div class="panel-body">
+                        The Garg Samhita states that once Nand Baba and Yashoda Maiya had expressed their wish to Lord Krishna to visit the four dhams. On this, Lord Krishna told him where you will go in old age! I invite all four pilgrimages to Braj. As soon as Lord Krishna said this, all the four dhams came here and sat in Braj. After that Yashoda Maiya and Nandbane revolved around him. In fact since then, the beginning of the circumambulation of eighty-four Kos is considered.
+                    </div>  
+                </div>
+            </div> 
             
         </div>  
     </div>
@@ -1006,9 +1023,9 @@
 
             <!--<script type="text/javascript" src="//counter.websiteout.net/js/5/9/1000/0"></script> -->
             <div style="pointer-events: none;">
-            <div id="sfca9tyznsr18jkdz96bmze2kq1ql5es7qx"></div>
-            <script type="text/javascript" src="https://counter3.stat.ovh/private/counter.js?c=a9tyznsr18jkdz96bmze2kq1ql5es7qx&down=async" async></script>
-            <noscript><a href="https://www.freecounterstat.com" title="hit counter"><img src="https://counter3.stat.ovh/private/freecounterstat.php?c=a9tyznsr18jkdz96bmze2kq1ql5es7qx" border="0" title="hit counter" alt="hit counter"></a></noscript>
+                <div id="sfcbzyb65646deq6z13n5r1u5aygd2b1bnf"></div>
+                <script type="text/javascript" src="https://counter8.stat.ovh/private/counter.js?c=bzyb65646deq6z13n5r1u5aygd2b1bnf&down=async" async></script>
+                <noscript><a href="https://www.freecounterstat.com" title="free hit counter"><img src="https://counter8.stat.ovh/private/freecounterstat.php?c=bzyb65646deq6z13n5r1u5aygd2b1bnf" border="0" title="free hit counter" alt="free hit counter"></a></noscript>
         </div>
         </div>
       </div>
