update about page

--- a/health_care.html
+++ b/health_care.html
@@ -94,7 +94,7 @@
                               <strong>Email</strong>
                               <br>
                               <a href="#">
-                                    <span style="font-weight: 600;">soulofbraj@gmail.com</span>
+                                    <span>soulofbraj@gmail.com</span>
                               </a>
                         </li>
                         <li class="item">
@@ -103,7 +103,7 @@
                               </div>
                               <strong>Call Now</strong>
                               <br>
-                              <span style="font-weight: 600;">+91-8439406670</span>
+                              <span>+91-9999999999</span>
                         </li>
                   </ul>
                   <div class="link-btn">
@@ -118,7 +118,6 @@
 <!--Main Header-->
 <nav class="navbar navbar-default">
       <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                   <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
                         aria-expanded="false">
@@ -128,71 +127,37 @@
                         <span class="icon-bar"></span>
                   </button>
             </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                   <ul class="nav navbar-nav">
-                        <li class="active">
+                        <li>
                               <a href="index.html">Home</a>
                         </li>
                         <li class="active">
                               <a href="about.html">About</a>
                         </li>
-                        <li class="active">
+                        <li>
                               <a href="vision.html">Vision</a>
                         </li >
-                        <li class="active">
+                        <li>
                               <a href="gallery.html">Gallery</a>
                         </li>
-                        <li class="active">
+                        <li>
                               <a href="team.html">Team</a>
                         </li>
-                        <li class="active">
-                              <a href="donate.html">Donate</a>
-                        </li>
-                        <li class="active">
+                        <li>
                               <a href="braj_news.html">Braj News</a>
                         </li>
-                        <li class="active">
+                        <li>
+                              <a href="success_stories.html">Success Stories</a>
+                      </li>
+                        <li>
                               <a href="contact.html">Contact</a>
                         </li>
-                        <li class="active">
-                              <a href="testimonials.html">Testimonials</a>
-                        </li>
-                        <li class="active">
-                              <a href="success_stories.html">Success Stories</a>
-                        </li>
-                        <!-- <li class="dropdown">
-                              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown
-                                    <span class="caret"></span>
-                              </a>
-                              <ul class="dropdown-menu">
-                                    <li>
-                                          <a href="#">Action</a>
-                                    </li>
-                                    <li>
-                                          <a href="#">Another action</a>
-                                    </li>
-                                    <li>
-                                          <a href="#">Something else here</a>
-                                    </li>
-                                    <li role="separator" class="divider"></li>
-                                    <li>
-                                          <a href="#">Separated link</a>
-                                    </li>
-                                    <li role="separator" class="divider"></li>
-                                    <li>
-                                          <a href="#">One more separated link</a>
-                                    </li>
-                              </ul>
-                        </li> -->
                   </ul>
             </div>
-            <!-- /.navbar-collapse -->
       </div>
-      <!-- /.container-fluid -->
 </nav>
 <!--End Main Header -->
-
 <!--Page Title-->
 <section class="page-title text-center" style="background-image:url(images/background/3.jpg);">
     <div class="container">
@@ -217,8 +182,18 @@
             <div class="col-md-6">
                 <div class="story-content">
                     <h2>basic health care</h2>
-                    <h5 class="tagline">text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text 
-</p>
+                    <h5 class="tagline">“Soul of Braj” primary goal is to provide primary health care made accessible to individuals in a community at free of cost.
+We aimed to provide comprehensive and continuous care to the patients. It helps in making the patients available with various social welfare and public health services in initiated by the concerned governing bodies and other organization.
+A tremendous amount of needless pain and suffering can be eliminated by ensuring that health insurance is universally available.
+Public health care is characterized by partnership and empowerment of the people that shall permeate as the core strategy in the effective provision of essentials health services that is community based, accessible, acceptable and sustainable at cost which the community and government can afford the concept of primary health care as strategy to reach the goals.
+We would organize a dedicated team of healthcare professionals offering the best medical services. They provide a coordinated approach to the delivery of health care that ensures that the beneficiaries receive the best care from the right health provider.
+Best clinical decisions are at the heart of appropriate care, the goal to which our system should aspire.
+It is much important to know what sort of a patient has a disease than that what sort of disease a patient has.
+Primary health care is the cornerstone of the health system. It can help us prevent, treat and manage both infectious and non-communicable diseases –bringing the world one step closer to universal health coverage.
+Health care must be recognized as right, not a privilege. 
+What kind of nation are we when we give tax breaks to billionaires, but we can’t take care of the elderly and children.
+
+                    </h5>
                     
                 </div>
             </div>
@@ -228,7 +203,7 @@
 
 
 
-<!--footer-main--> 
+<!--footer-main-->
 <footer class="footer-main">
   <div class="footer-top">
     <div class="container">
@@ -238,7 +213,7 @@
             <div class="footer-logo">
               <figure>
                 <a href="index.html">
-                  <img src="images/logo.png" alt="">
+                  <img src="images/BRAJ%20WHITE.png" alt="" width="150px;">
                 </a>
               </figure>
             </div>
@@ -246,7 +221,7 @@
             <ul class="location-link">
               <li class="item">
                 <i class="fa fa-map-marker"></i>
-                <p>Sri Krishna greens<br> Vridavan, Mathura<br> Uttar Pradesh<br> 281121</p>
+                <p>Sri Krishna greens<br> F-104<br> Vridavan, Mathura<br> Uttar Pradesh<br> 281121</p>
               </li>
               <li class="item">
                 <i class="fa fa-envelope-o" aria-hidden="true"></i>
@@ -267,7 +242,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-md-4 col-sm-6 col-xs-12">
+        <div class="col-md-4 col-sm-6 col-xs-12 col-md-push-4">
           <h6>Services</h6>
           <ul class="menu-link">
             <li>
@@ -288,45 +263,11 @@
             </li>
             <li>
               <a href="rural_devlopment.html">
-                <i class="fa fa-angle-right" aria-hidden="true"></i>Water and Sanitation and Rural Development</a>
+                <i class="fa fa-angle-right" aria-hidden="true"></i>Rural development and Preserving Old Heritage</a>
             </li>
           </ul>
         </div>
-        <div class="col-md-4 col-sm-6 col-xs-12">
-          <div class="social-links">
-            <h6>Recent Activites</h6>
-            <ul>
-              <li class="item">
-                <div class="media">
-                  <div class="media-left">
-                    <a href="#">
-                      <img class="media-object" src="images/blog/post-thumb-small.jpg" alt="post-thumb">
-                    </a>
-                  </div>
-                  <div class="media-body">
-                    <h4 class="media-heading"><a href="#">Title</a></h4>
-                    <p>Short Descreption</p>
-                  </div>
-                </div>
-              </li>
-              <li class="item">
-                <div class="media">
-                  <div class="media-left">
-                    <a href="#">
-                      <img class="media-object" src="images/blog/post-thumb-small.jpg" alt="post-thumb">
-                    </a>
-                  </div>
-                  <div class="media-body">
-                    <h4 class="media-heading">
-                      <a href="#">Title</a>
-                    </h4>
-                    <p>Short Descreption</p>
-                  </div>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
+        
       </div>
     </div>
   </div>
@@ -340,7 +281,7 @@
 <!--Scroll to top-->
 <div class="scroll-to-top scroll-to-target" data-target=".header-top">
   <span class="icon fa fa-angle-up"></span>
-</div>
+</div> 
 
 <script src="plugins/jquery.js"></script>
 <script src="plugins/bootstrap.min.js"></script>
@@ -349,11 +290,7 @@
 <script src="plugins/slick/slick.min.js"></script>
 <!-- FancyBox -->
 <script src="plugins/fancybox/jquery.fancybox.min.js"></script>
-<!-- Google Map -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCC72vZw-6tGqFyRhhg5CkF2fqfILn2Tsw"></script>
-<script src="plugins/google-map/gmap.js"></script>
 
-<script src="plugins/validate.js"></script>
 <script src="plugins/wow.js"></script>
 <script src="plugins/jquery-ui.js"></script>
 <script src="plugins/timePicker.js"></script>
