--- a/community_service.html
+++ b/community_service.html
@@ -94,7 +94,7 @@
                               <strong>Email</strong>
                               <br>
                               <a href="#">
-                                    <span style="font-weight: 600;">soulofbraj@gmail.com</span>
+                                    <span>soulofbraj@gmail.com</span>
                               </a>
                         </li>
                         <li class="item">
@@ -103,7 +103,7 @@
                               </div>
                               <strong>Call Now</strong>
                               <br>
-                              <span style="font-weight: 600;">+91-8439406670</span>
+                              <span>+91-9999999999</span>
                         </li>
                   </ul>
                   <div class="link-btn">
@@ -118,7 +118,6 @@
 <!--Main Header-->
 <nav class="navbar navbar-default">
       <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                   <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
                         aria-expanded="false">
@@ -128,68 +127,35 @@
                         <span class="icon-bar"></span>
                   </button>
             </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                   <ul class="nav navbar-nav">
-                        <li class="active">
+                        <li>
                               <a href="index.html">Home</a>
                         </li>
                         <li class="active">
                               <a href="about.html">About</a>
                         </li>
-                        <li class="active">
+                        <li>
                               <a href="vision.html">Vision</a>
                         </li >
-                        <li class="active">
+                        <li>
                               <a href="gallery.html">Gallery</a>
                         </li>
-                        <li class="active">
+                        <li>
                               <a href="team.html">Team</a>
                         </li>
-                        <li class="active">
-                              <a href="donate.html">Donate</a>
-                        </li>
-                        <li class="active">
+                        <li>
                               <a href="braj_news.html">Braj News</a>
                         </li>
-                        <li class="active">
+                        <li>
+                              <a href="success_stories.html">Success Stories</a>
+                      </li>
+                        <li>
                               <a href="contact.html">Contact</a>
                         </li>
-                        <li class="active">
-                              <a href="testimonials.html">Testimonials</a>
-                        </li>
-                        <li class="active">
-                              <a href="success_stories.html">Success Stories</a>
-                        </li>
-                        <!-- <li class="dropdown">
-                              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown
-                                    <span class="caret"></span>
-                              </a>
-                              <ul class="dropdown-menu">
-                                    <li>
-                                          <a href="#">Action</a>
-                                    </li>
-                                    <li>
-                                          <a href="#">Another action</a>
-                                    </li>
-                                    <li>
-                                          <a href="#">Something else here</a>
-                                    </li>
-                                    <li role="separator" class="divider"></li>
-                                    <li>
-                                          <a href="#">Separated link</a>
-                                    </li>
-                                    <li role="separator" class="divider"></li>
-                                    <li>
-                                          <a href="#">One more separated link</a>
-                                    </li>
-                              </ul>
-                        </li> -->
                   </ul>
             </div>
-            <!-- /.navbar-collapse -->
       </div>
-      <!-- /.container-fluid -->
 </nav>
 <!--End Main Header -->
 
@@ -218,8 +184,18 @@
             <div class="col-md-6">
                 <div class="story-content">
                     <h2>community service</h2>
-                    <h5 class="tagline">text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text 
-</p>
+                    <h5 class="tagline">“Soul of Braj” is focused on Community service as it is not only a way to give back, but it also is great for volunteers as well. Helping others makes us feel better. By giving back, we really helping ourselves. 
+Service to a just cause rewards the workers with more real happiness and satisfaction than any other venture of life.
+Whoever renders service to many puts himself in line for greatness- great wealth, great return, great satisfaction and great joy.
+To give real service you must add something which cannot be bought or measured with money, and that is sincerity and integrity.
+Help others and give something back. I gurantee you will discover that while public service improves the lives and the world around you, its greatest reward is the enrichment and new meaning it will bring your own life.
+Lose yourself in generous service and every day can be most unusual day, a triumphant day, an abundantly rewarding day.
+Without community service, we would not have a strong quality of life. It’s important to the person who serves as well as the recipient. It’s the way in which we ourselves grow and develop.
+No act of kindness, no matter how small, is ever wasted. There is no higher religion than human service. To work for the common good is the greatest creed.
+We have to do what we can to help wherever and whenever it is possible for us to help.
+ Service is the rent we pay for being. It is the very purpose of life and not something you do in your spare time.
+
+                    </h5>
                     
                 </div>
             </div>
@@ -228,7 +204,7 @@
 </section>
 
 
-<!--footer-main--> 
+<!--footer-main-->
 <footer class="footer-main">
   <div class="footer-top">
     <div class="container">
@@ -238,7 +214,7 @@
             <div class="footer-logo">
               <figure>
                 <a href="index.html">
-                  <img src="images/logo.png" alt="">
+                  <img src="images/BRAJ%20WHITE.png" alt="" width="150px;">
                 </a>
               </figure>
             </div>
@@ -246,7 +222,7 @@
             <ul class="location-link">
               <li class="item">
                 <i class="fa fa-map-marker"></i>
-                <p>Sri Krishna greens<br> Vridavan, Mathura<br> Uttar Pradesh<br> 281121</p>
+                <p>Sri Krishna greens<br> F-104<br> Vridavan, Mathura<br> Uttar Pradesh<br> 281121</p>
               </li>
               <li class="item">
                 <i class="fa fa-envelope-o" aria-hidden="true"></i>
@@ -267,7 +243,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-md-4 col-sm-6 col-xs-12">
+        <div class="col-md-4 col-sm-6 col-xs-12 col-md-push-4">
           <h6>Services</h6>
           <ul class="menu-link">
             <li>
@@ -288,45 +264,11 @@
             </li>
             <li>
               <a href="rural_devlopment.html">
-                <i class="fa fa-angle-right" aria-hidden="true"></i>Water and Sanitation and Rural Development</a>
+                <i class="fa fa-angle-right" aria-hidden="true"></i>Rural development and Preserving Old Heritage</a>
             </li>
           </ul>
         </div>
-        <div class="col-md-4 col-sm-6 col-xs-12">
-          <div class="social-links">
-            <h6>Recent Activites</h6>
-            <ul>
-              <li class="item">
-                <div class="media">
-                  <div class="media-left">
-                    <a href="#">
-                      <img class="media-object" src="images/blog/post-thumb-small.jpg" alt="post-thumb">
-                    </a>
-                  </div>
-                  <div class="media-body">
-                    <h4 class="media-heading"><a href="#">Title</a></h4>
-                    <p>Short Descreption</p>
-                  </div>
-                </div>
-              </li>
-              <li class="item">
-                <div class="media">
-                  <div class="media-left">
-                    <a href="#">
-                      <img class="media-object" src="images/blog/post-thumb-small.jpg" alt="post-thumb">
-                    </a>
-                  </div>
-                  <div class="media-body">
-                    <h4 class="media-heading">
-                      <a href="#">Title</a>
-                    </h4>
-                    <p>Short Descreption</p>
-                  </div>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
+        
       </div>
     </div>
   </div>
@@ -340,7 +282,7 @@
 <!--Scroll to top-->
 <div class="scroll-to-top scroll-to-target" data-target=".header-top">
   <span class="icon fa fa-angle-up"></span>
-</div>
+</div> 
 
 <script src="plugins/jquery.js"></script>
 <script src="plugins/bootstrap.min.js"></script>
@@ -349,11 +291,7 @@
 <script src="plugins/slick/slick.min.js"></script>
 <!-- FancyBox -->
 <script src="plugins/fancybox/jquery.fancybox.min.js"></script>
-<!-- Google Map -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCC72vZw-6tGqFyRhhg5CkF2fqfILn2Tsw"></script>
-<script src="plugins/google-map/gmap.js"></script>
 
-<script src="plugins/validate.js"></script>
 <script src="plugins/wow.js"></script>
 <script src="plugins/jquery-ui.js"></script>
 <script src="plugins/timePicker.js"></script>
