header and footer layout changed

--- a/Water-and-Sanitation-and-Rural-Development.html
+++ b/Water-and-Sanitation-and-Rural-Development.html
@@ -160,7 +160,7 @@
 <!--End Main Header -->
 
 <!--Page Title-->
-<section class="page-title text-center" style="background-image:url(images/background/3.jpg);">
+<section class="page-title text-center" style="background-image:url(images/3.jpg);">
     <div class="container">
         <div class="title-text">
             <h1>rural devlopment</h1>
@@ -178,7 +178,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <img src="images/activity/rural.jpg" class="responsive" alt="story">
+                <img src="images/rural.jpg" class="responsive" alt="story">
             </div>
             <div class="col-md-6">
                 <div class="story-content">
