--- a/index.html
+++ b/index.html
@@ -998,23 +998,23 @@
           <h6>Services</h6>
           <ul class="menu-link">
             <li>
-              <a href="food_distribution.html">
+              <a href="Food-distribution-for-needful.html">
                 <i class="fa fa-angle-right" aria-hidden="true"></i>Food distribution for needful </a>
             </li>
             <li>
-              <a href="basic_education.html">
+              <a href="Basic-education-for-all-children.html">
                 <i class="fa fa-angle-right" aria-hidden="true"></i>Basic education for all children </a>
             </li>
             <li>
-              <a href="health_care.html">
+              <a href="Basic-health-care-facilities-for-brajwasi.html">
                 <i class="fa fa-angle-right" aria-hidden="true"></i>Basic health care facilities for brajwasi </a>
             </li>
             <li>
-              <a href="community_service.html">
+              <a href="community-service.html">
                 <i class="fa fa-angle-right" aria-hidden="true"></i>Community Service </a>
             </li>
             <li>
-              <a href="rural_devlopment.html">
+              <a href="Water-and-Sanitation-and-Rural-Development.html">
                 <i class="fa fa-angle-right" aria-hidden="true"></i>Water and Sanitation and Rural Development</a>
             </li>
           </ul>  
