Publication nav link updated

--- a/index.html
+++ b/index.html
@@ -158,6 +158,9 @@
                        <li>
                               <a href="contact.html">Contact</a>
                         </li>
+                      <li>
+                              <a href="#">Publication</a>
+                        </li>
                   </ul>
           </div>   
       </div>  
