--- a/contact.html
+++ b/contact.html
@@ -92,10 +92,10 @@
                               <a href="index.html">Home</a>
                         </li>
                         <li>
-                              <a href="#">About</a>
+                              <a href="about.html">About</a>
                         </li>
                         <li>
-                              <a href="#">Vision</a>
+                              <a href="vision.html">Vision</a>
                         </li >
                         <li>
                               <a href="#">Gallery</a>
@@ -111,6 +111,9 @@
                         </li>
                        <li class="active">
                               <a href="contact.html">Contact</a>
+                        </li>
+                      <li>
+                              <a href="#">Publication</a>
                         </li>
                         
                   </ul>
