--- a/donate-using-qr-code.html
+++ b/donate-using-qr-code.html
@@ -113,10 +113,10 @@
                               <a href="index.html">Home</a>
                         </li>
                         <li >
-                              <a href="#">About</a>
+                              <a href="about.html">About</a>
                         </li>
                         <li>
-                              <a href="#">Vision</a>
+                              <a href="vision.html">Vision</a>
                         </li >
                         <li>
                               <a href="#">Gallery</a>
@@ -132,6 +132,9 @@
                         </li>
                        <li>
                               <a href="contact.html">Contact</a>
+                        </li>
+                      <li>
+                              <a href="#">Publication</a>
                         </li>
                   </ul>
         </div>
