--- a/donate.html
+++ b/donate.html
@@ -110,10 +110,10 @@
                               <a href="index.html">Home</a>
                         </li>
                         <li >
-                              <a href="#">About</a>
+                              <a href="about.html">About</a>
                         </li>
                         <li>
-                              <a href="#">Vision</a>
+                              <a href="vision.html">Vision</a>
                         </li >
                         <li>
                               <a href="#">Gallery</a>
@@ -129,6 +129,9 @@
                         </li>
                        <li>
                               <a href="contact.html">Contact</a>
+                        </li>
+                      <li>
+                              <a href="#">Publication</a>
                         </li>
                   </ul>
         </div>
