--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
                               <a href="index.html">Home</a>
                         </li>
                         <li >
-                              <a href="#">About</a>
+                              <a href="about.html">About</a>
                         </li>
                         <li>
-                              <a href="#">Vision</a>
+                              <a href="vision.html">Vision</a>
                         </li >
                         <li>
                               <a href="#">Gallery</a>
