--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
                               <a href="vision.html">Vision</a>
                         </li >
                         <li>
-                              <a href="#">Gallery</a>
+                              <a href="gallery.html">Gallery</a>
                         </li>
                         <li>
                               <a href="#">Team</a>
