--- a/csr-news.html
+++ b/csr-news.html
@@ -91,13 +91,13 @@
                               <a href="index.html">Home</a>
                         </li>
                         <li>
-                              <a href="#">About</a>
+                              <a href="about.html">About</a>
                         </li>
                         <li>
-                              <a href="#">Vision</a>
+                              <a href="vision.html">Vision</a>
                         </li >
                         <li>
-                              <a href="#">Gallery</a>
+                              <a href="gallery.html">Gallery</a>
                         </li>
                         <li>
                               <a href="#">Team</a>
