--- a/donate.html
+++ b/donate.html
@@ -116,7 +116,7 @@
                               <a href="vision.html">Vision</a>
                         </li >
                         <li>
-                              <a href="#">Gallery</a>
+                              <a href="gallery.html">Gallery</a>
                         </li>
                         <li>
                               <a href="#">Team</a>
