--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                               <a href="vision.html">Vision</a>
                         </li >
                         <li>
-                              <a href="#">Gallery</a>
+                              <a href="gallery.html">Gallery</a>
                         </li>
                         <li>
                               <a href="#">Team</a>
