youtube video embed with aboust us

--- a/index.html
+++ b/index.html
@@ -275,14 +275,20 @@
 <section class="feature-section">
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-12 col-xs-12">
+			
 				<div class="image-content" style="padding-top: 20px;">
 					<div class="section-title text-center">
 						<h3 style="font-weight: 900; font-size: 40px;">ABOUT US</h3>
+                        <div class="col-sm-6 col-xs-6">
 						<p>The soul of braj is an NGO, it comes under section 8 (NPO) headquarter in Vrindavan (Mathura). It is born with the pure intention to serve all brijwasi’s as Written in Shrimad Bhagavatam “My beloved Krishna, I want to become a servant of your servant” Soul of braj has been focusing and trying to make a positive impact on the living standards of the economically poor and disadvantaged people of braj by helping them to provide basic health care facilities and sanitation. We are continuously leveraging basic facilities like Clean water to drinks and hygiene food to multiply our reach and also preserving old heritage. <br>
                         Our collaboration with SDG Chaupal and Nagrik Foundation, along with the persistent support from prestigious corporates, individual donors, and well-wishers have helped us to grow and serve braj from all over the world. </p>
-                        <img src="images/about-img.png" class = "img-responsive" alt="">
 					</div>
+                    <!--About us video-->    
+                    <div class="col-md-6" style="padding-left: 20px;">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/j-_oAAnrC0A?&autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        
+                    </div>
+                    <!--end code-->
+                 <img src="images/about-img.png" class = "img-responsive" alt="">
 				</div>
 			</div>
 		</div>
