some bugs fixed it

--- a/csr-news.html
+++ b/csr-news.html
@@ -174,7 +174,7 @@
             <ul class="location-link">
               <li class="item">
                 <i class="fa fa-map-marker"></i>
-                  <p>Sri Krishna greens<br> Vridavan, Mathura<br> Uttar Pradesh<br> 281121</p>
+                  <p>Sri Krishna greens<br> Vrindavan, Mathura<br> Uttar Pradesh<br> 281121</p>
             
               </li>
               <li class="item">
