--- a/about.html
+++ b/about.html
@@ -120,19 +120,19 @@
 </nav>
 <!--End Main Header -->
 
-<div class="hero-slider">
-    <!-- Slider Item -->
-    <a href="donate.html">
-    <div class="slider-item" style="background-image:url(images/slider2.jpg); cursor: pointer;">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                </div>
-            </div>
+<section class="page-title text-center" style="background-image:url(images/header_bg.jpg);">
+    <div class="container">
+        <div class="title-text">
+            <h1>About</h1>
+            <ul class="title-menu clearfix">
+                <li>
+                    <a href="index.html">home &nbsp;/</a>
+                </li>
+                <li>About</li>
+            </ul>
         </div>
     </div>
-    </a>   
-</div>
+</section>
 
 <!-- Our Story -->
 <section class="story">
@@ -144,7 +144,7 @@
             <div class="col-md-6">
                 <div class="story-content">
                     <h2>Our Story</h2>
-                    <h4 style=" font-size: 24px; text-align: justify;" class="tagline">The Soul of braj Federation is a NPO ( Non Profit Organization )  , it comes under section 8,  Located in Vrindavan (Mathura).
+                    <h4 style=" font-size: 24px; text-align: justify; color: #9f6934;" class="tagline">The Soul of braj Federation is a NPO ( Non Profit Organization )  , it comes under section 8,  Located in Vrindavan (Mathura).
 
                     It is born with the pure intention to serve all brijwasi’s as Written in Shrimad bhagvatam <strong>“My beloved krishna, I want to become a servant of your servant” </strong>  Soul of braj Federation has been focusing and trying to make a positive impact on the living standards of the economically poor and disadvantaged people of braj by helping them to provide basic Health care, Water and Sanitation , Basic Education, Hygiene Food and Community Service. 
 
@@ -243,7 +243,7 @@
             <ul class="location-link">
               <li class="item">
                 <i class="fa fa-map-marker"></i>
-                  <p>Sri Krishna greens<br> Vridavan, Mathura<br> Uttar Pradesh<br> 281121</p>
+                  <p>Sri Krishna greens<br> Vrindavan, Mathura<br> Uttar Pradesh<br> 281121</p>
             
               </li>
               <li class="item">
@@ -269,23 +269,27 @@
           <h6>Services</h6>
           <ul class="menu-link">
             <li>
-              <a href="#">
+              <a href="index.html#activites">
+                <i class="fa fa-angle-right" aria-hidden="true"></i>Sanitary Pads</a>
+            </li>  
+            <li>
+              <a href="index.html#activites">
                 <i class="fa fa-angle-right" aria-hidden="true"></i>Food distribution for needful </a>
             </li>
             <li>
-              <a href="#">
+              <a href="index.html#activites">
                 <i class="fa fa-angle-right" aria-hidden="true"></i>Basic education for all children </a>
             </li>
             <li>
-              <a href="#">
+              <a href="index.html#activites">
                 <i class="fa fa-angle-right" aria-hidden="true"></i>Basic health care facilities for brajwasi </a>
             </li>
             <li>
-              <a href="#">
+              <a href="index.html#activites">
                 <i class="fa fa-angle-right" aria-hidden="true"></i>Community Service </a>
             </li>
             <li>
-              <a href="#">
+              <a href="index.html#activites">
                 <i class="fa fa-angle-right" aria-hidden="true"></i>Water and Sanitation and Rural Development</a>
             </li>
           </ul>  
