--- a/contact.html
+++ b/contact.html
@@ -153,7 +153,7 @@
                         <i class="fa fa-map-o"></i>
                         <div class="media-body">
                             <h3>Location</h3>
-                            <p>Sri Krishna greens<br> Vridavan, Mathura<br> Uttar Pradesh<br> 281121</p>
+                            <p>Sri Krishna greens<br> Vrindavan, Mathura<br> Uttar Pradesh<br> 281121</p>
                         </div>
                     </div>
                     <!-- Phone -->
@@ -275,26 +275,30 @@
           <h6>Services</h6>
           <ul class="menu-link">
             <li>
-              <a href="food_distribution.html">
+              <a href="index.html#activites">
+                <i class="fa fa-angle-right" aria-hidden="true"></i>Sanitary Pads</a>
+            </li>  
+            <li>
+              <a href="index.html#activites">
                 <i class="fa fa-angle-right" aria-hidden="true"></i>Food distribution for needful </a>
             </li>
             <li>
-              <a href="basic_education.html">
+              <a href="index.html#activites">
                 <i class="fa fa-angle-right" aria-hidden="true"></i>Basic education for all children </a>
             </li>
             <li>
-              <a href="health_care.html">
+              <a href="index.html#activites">
                 <i class="fa fa-angle-right" aria-hidden="true"></i>Basic health care facilities for brajwasi </a>
             </li>
             <li>
-              <a href="community_service.html">
+              <a href="index.html#activites">
                 <i class="fa fa-angle-right" aria-hidden="true"></i>Community Service </a>
             </li>
             <li>
-              <a href="rural_devlopment.html">
+              <a href="index.html#activites">
                 <i class="fa fa-angle-right" aria-hidden="true"></i>Water and Sanitation and Rural Development</a>
             </li>
-          </ul>
+          </ul>  
         </div>
         
       </div>
