update api of csr-news page

--- a/csr-news.html
+++ b/csr-news.html
@@ -139,7 +139,10 @@
     }  
     
     .uw-scroller .uw-imgcont2{
-        min-height: 110px;
+        min-height: 140px;
+    }
+    #fg-widget-e913d4a384a47c870309b6021 .uw-imgcont2{
+        width: 24%;
     }
 </style>      
 
@@ -147,8 +150,8 @@
 <div class="container">
 <div class="row">
 <div style="padding-top: 60px; padding-bottom: 60px; " class="col-md-12 ">
-<div class="feedgrabbr_widget" id="fgid_cc37536af14c4ddf1fa1adf1c"></div>
-<script>if (typeof (fg_widgets) === "undefined") fg_widgets = new Array(); fg_widgets.push("fgid_cc37536af14c4ddf1fa1adf1c");</script>
+<div class="feedgrabbr_widget" id="fgid_e913d4a384a47c870309b6021"></div>
+<script>if (typeof (fg_widgets) === "undefined") fg_widgets = new Array(); fg_widgets.push("fgid_e913d4a384a47c870309b6021");</script>
 <script async src="https://www.feedgrabbr.com/widget/fgwidget.js"></script>
 </div>
 </div>
@@ -200,23 +203,23 @@
           <h6>Services</h6>
           <ul class="menu-link">
             <li>
-              <a href="food_distribution.html">
+              <a href="index.html#activites">
                 <i class="fa fa-angle-right" aria-hidden="true"></i>Food distribution for needful </a>
             </li>
             <li>
-              <a href="basic_education.html">
+              <a href="index.html#activites">
                 <i class="fa fa-angle-right" aria-hidden="true"></i>Basic education for all children </a>
             </li>
             <li>
-              <a href="health_care.html">
+              <a href="index.html#activites">
                 <i class="fa fa-angle-right" aria-hidden="true"></i>Basic health care facilities for brajwasi </a>
             </li>
             <li>
-              <a href="community_service.html">
+              <a href="index.html#activites">
                 <i class="fa fa-angle-right" aria-hidden="true"></i>Community Service </a>
             </li>
             <li>
-              <a href="rural_devlopment.html">
+              <a href="index.html#activites">
                 <i class="fa fa-angle-right" aria-hidden="true"></i>Water and Sanitation and Rural Development</a>
             </li>
           </ul>
