some bug resolve it

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>About | Soul of Braj</title>
+  <title>About | Soul of Braj Federation</title>
 
   
   <!-- mobile responsive meta -->
@@ -258,10 +258,11 @@
               </li>
             </ul>
             <ul class="list-inline social-icons">
-              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-vimeo"></i></a></li>
+              <li><a href="https://www.facebook.com/soulofbraj" target="_blank"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="https://twitter.com/SoulOfBraj" target="_blank"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="https://www.linkedin.com/company/soulofbraj/?viewAsMember=true" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.youtube.com/channel/UCzqx_Vu1yQ5U1ioIPsX1-Zw?view_as=subscriber" target="_blank"><i class="fa fa-youtube"></i></a></li>
+              <li><a href="https://wa.me/918439406670" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
             </ul>
           </div>
         </div>
