--- a/donate.html
+++ b/donate.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Donate | Soul of Braj</title>
+  <title>Donate | Soul of Braj Federation</title>
 
   
   <!-- mobile responsive meta -->
