--- a/vision.html
+++ b/vision.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Vision | Soul of Braj</title>
+  <title>Vision | Soul of Braj Federation</title>
 
   
   <!-- mobile responsive meta -->
@@ -155,7 +155,9 @@
                 <div class="section-title">
                     <h2 style="font-size: 30px;">Our vision</h2>
                     <br>
-                   <p  style="font-size: 16px;">Our Foundation is steered by the vision of a healthy community in particular underprivileged backgrounds - can belong and thrive.</p>    
+                   <p  style="font-size: 16px;">To be the best Non Profit Organization in India, specially in mathura district, beings the best means providing outstanding service to our braj people for their betterment.
+                       <br>
+                   We also like to open new verticals for corporate companies in braj region, so they can build strong and meaningful partnership in mathura district.</p>    
                 </div>
             </div>
             
@@ -205,10 +207,11 @@
               </li>
             </ul>
             <ul class="list-inline social-icons">
-              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-vimeo"></i></a></li>
+              <li><a href="https://www.facebook.com/soulofbraj" target="_blank"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="https://twitter.com/SoulOfBraj" target="_blank"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="https://www.linkedin.com/company/soulofbraj/?viewAsMember=true" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.youtube.com/channel/UCzqx_Vu1yQ5U1ioIPsX1-Zw?view_as=subscriber" target="_blank"><i class="fa fa-youtube"></i></a></li>
+              <li><a href="https://wa.me/918439406670" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
             </ul>
           </div>
         </div>
