some changes done :)

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                               <a href="gallery.html">Gallery</a>
                         </li>
                         <li>
-                              <a href="#">Team</a>
+                              <a href="team.html">Team</a>
                         </li>
                         <li>
                               <a href="csr-news.html">CSR News</a>
@@ -335,7 +335,7 @@
 <!--End about section-->
 
 <!--Start about us area-->
-<section class="service-tab-section section  section bg-gray" id="activites">
+<section class="service-tab-section section  section bg-gray" id="/activites">
     <div class="outer-box clearfix">
         <div class="container">
             <div class="row">
