few changes done :)

--- a/donate-using-qr-code.html
+++ b/donate-using-qr-code.html
@@ -122,7 +122,7 @@
                               <a href="gallery.html">Gallery</a>
                         </li>
                         <li>
-                              <a href="#">Team</a>
+                              <a href="team.html">Team</a>
                         </li>
                         <li>
                               <a href="csr-news.html">CSR News</a>
@@ -130,11 +130,11 @@
                         <li>
                               <a href="#">Success Stories</a>
                         </li>
+					    <li>
+                              <a href="publications.html">Publications</a>
+                        </li>
                        <li>
                               <a href="contact.html">Contact</a>
-                        </li>
-                      <li>
-                              <a href="#">Publication</a>
                         </li>
                   </ul>
         </div>
@@ -430,8 +430,7 @@
 <!---form plugin-->
 <script src="vendor/jquery/jquery.min.js"></script>
 <script src="vendor/select2/select2.min.js"></script>
-<script src="vendor/datepicker/moment.min.js"></script> 
-<script src="vendor/datepicker/daterangepicker.js"></script>
+
 <script src="js/form_js.js"></script>
 <!--End form plugin-->    
 
@@ -448,7 +447,6 @@
 <!--End donate form script-->   
      
 
-<script src="plugins/wow.js"></script>
 <script src="plugins/jquery-ui.js"></script>
 <script src="js/script.js"></script>
 <script src="js/firebase_init.js"></script>
