--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@
                         <li>
                               <a href="#">Success Stories</a>
                         </li>
+					    <li>
+                              <a href="publications.html">Publications</a>
+                        </li>
                        <li>
                               <a href="contact.html">Contact</a>
-                        </li>
-                      <li>
-                              <a href="#">Publication</a>
                         </li>
                   </ul>
           </div>   
