--- a/shubhank-singh.html
+++ b/shubhank-singh.html
@@ -111,7 +111,7 @@
                               <a href="#">Success Stories</a>
                         </li>
                       <li>
-                              <a href="#">Publication</a>
+                              <a href="publications.html">Publications</a>
                         </li>
                       <li>
                               <a href="contact.html">Contact</a>
@@ -285,14 +285,9 @@
 <script src="plugins/slick/slick.min.js"></script>
 <!-- FancyBox -->
 <script src="plugins/fancybox/jquery.fancybox.min.js"></script>
-<!-- Google Map -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCC72vZw-6tGqFyRhhg5CkF2fqfILn2Tsw"></script>
-<script src="plugins/google-map/gmap.js"></script>
 
-<script src="plugins/validate.js"></script>
-<script src="plugins/wow.js"></script>
+
 <script src="plugins/jquery-ui.js"></script>
-<script src="plugins/timePicker.js"></script>
 <script src="js/script.js"></script>
 </body>
 
