--- a/gallery.html
+++ b/gallery.html
@@ -100,19 +100,19 @@
                               <a href="gallery.html">Gallery</a>
                         </li>
                         <li>
-                              <a href="#">Team</a>
+                              <a href="team.html">Team</a>
                         </li>
                         <li>
-                              <a href="#">CSR News</a>
+                              <a href="csr-news.html">CSR News</a>
                         </li>
                         <li>
                               <a href="#">Success Stories</a>
                         </li>
+					    <li>
+                              <a href="publications.html">Publications</a>
+                        </li>
                        <li>
                               <a href="contact.html">Contact</a>
-                        </li>
-                      <li>
-                              <a href="#">Publication</a>
                         </li>
                   </ul>
           </div>   
@@ -489,14 +489,9 @@
 <script src="plugins/slick/slick.min.js"></script>
 <!-- FancyBox -->
 <script src="plugins/fancybox/jquery.fancybox.min.js"></script>
-<!-- Google Map -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCC72vZw-6tGqFyRhhg5CkF2fqfILn2Tsw"></script>
-<script src="plugins/google-map/gmap.js"></script>
 
-<script src="plugins/validate.js"></script>
-<script src="plugins/wow.js"></script>
+
 <script src="plugins/jquery-ui.js"></script>
-<script src="plugins/timePicker.js"></script>
 <script src="js/script.js"></script>
 </body>
 
