--- a/publications-details.html
+++ b/publications-details.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
-  <title>About | Soul of Braj Federation</title>
+  <title>Publications Details | Soul of Braj Federation</title>
 
   
   <!-- mobile responsive meta -->
@@ -27,7 +27,7 @@
 
 
 <body>
-  <div class="page-wrapper">
+<div class="page-wrapper">
    
 <!--Header Upper-->
 <section class="header-uper">
@@ -90,7 +90,7 @@
                         <li>
                               <a href="index.html">Home</a>
                         </li>
-                        <li class="active">
+                        <li>
                               <a href="about.html">About</a>
                         </li>
                         <li>
@@ -108,7 +108,7 @@
                         <li>
                               <a href="#">Success Stories</a>
                         </li>
-					   <li>
+					    <li  class="active">
                               <a href="publications.html">Publications</a>
                         </li>
                        <li>
@@ -123,107 +123,141 @@
 <section class="page-title text-center" style="background-image:url(images/header_bg.jpg);">
     <div class="container">
         <div class="title-text">
-            <h1>About</h1>
+            <h1>Publications Details</h1>
             <ul class="title-menu clearfix">
                 <li>
                     <a href="index.html">home &nbsp;/</a>
                 </li>
-                <li>About</li>
+                <li>Publications Details</li>
             </ul>
         </div>
     </div>
 </section>
 
-<!-- Our Story -->
-<section class="story">
+<!-- Contact Section -->
+<section class="blog-section section style-four style-five">
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
-                <img src="images/about1.jpeg" class="responsive" alt="about us">
-            </div>
-            <div class="col-md-6">
-                <div class="story-content">
-                    <h2>Our Story</h2>
-                    <h4 style=" font-size: 24px; text-align: justify; color: #9f6934;" class="tagline">The Soul of braj Federation is a NPO ( Non Profit Organization )  , it comes under section 8,  Located in Vrindavan (Mathura).
-
-                    It is born with the pure intention to serve all brijwasi’s as Written in Shrimad bhagvatam <strong>“My beloved krishna, I want to become a servant of your servant” </strong>  Soul of braj Federation has been focusing and trying to make a positive impact on the living standards of the economically poor and disadvantaged people of braj by helping them to provide basic Health care, Water and Sanitation , Basic Education, Hygiene Food and Community Service. 
-
-                    Our Collaboration with Prestigious Corporates, individual donors, and well-wishers. Who have helped us to grow and
-                    serve Braj Region from all over the world.
-                    </h4>
-                    
+            <div class="col-md-9 col-sm-12 col-xs-12">
+                <div class="left-side">
+                    <div class="item-holder">
+                        <div class="image-box">
+                            <figure>
+                                <a href="single-blog.html"><img src="images/5.jpg" alt=""></a>
+                            </figure>
+                        </div>
+                        <div class="content-text">
+                            <a href="single-blog.html"><h5>Full Title of Publications</h5></a>
+                            <span>By Soul of Braj Federation / 02 January 2018</span>
+                            <p>Enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magniol res eos qui rate voluptatem sequi nesciunt Neque porro quisquam est qui dolorem ipsum quia dolore sit amet conlites sectetur adipisci quia suthagara lukuthea satham non numquam eius modi tempra. incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam. <br>
+                            Enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magniol res eos qui rate voluptatem sequi nesciunt Neque porro quisquam est qui dolorem ipsum quia dolore sit amet conlites sectetur adipisci quia suthagara lukuthea satham non numquam eius modi tempra. incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.</p>
+                            <div class="text">
+                                <p>
+                                    Incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosamincidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam.
+                                </p>
+                            </div>                            
+                        </div>
+                    </div>
+                </div>
+               <!--<div class="comments-area">
+                    <div class="sec-title">
+                        <h6>Comments (3)</h6>
+                    </div>
+                    <div class="comment">
+                        <div class="image-holder">
+                            <figure>
+                                <img src="images/blog/1.png" alt="">
+                            </figure>
+                        </div>
+                        <div class="image-text">
+                            <h6>Jacky Chan<span>April 06, 2018</span></h6>
+                            <a href="#"><h5><i class="fa fa-reply-all" aria-hidden="true"></i>Comment Back</h5></a>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam sequi praesentium, veritatis nulla quam at exercitationem? Nesciunt molestiae neque modi.</p>
+                        </div>                                            
+                    </div>                            
+                    <div class="comment reply-comment">
+                        <div class="image-holder">
+                            <figure>
+                                <img src="images/blog/2.png" alt="">
+                            </figure>
+                        </div>
+                        <div class="image-text">
+                            <h6>Robben Oti<span>April 07, 2018</span></h6>
+                            <a href="#"><h5><i class="fa fa-reply-all" aria-hidden="true"></i>Comment Back</h5></a>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, a! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi, obcaecati!</p>
+                        </div>                                    
+                    </div>                            
+                    <div class="comment">
+                        <div class="image-holder">
+                            <figure>
+                                <img src="images/blog/3.png" alt="">
+                            </figure>
+                        </div>
+                        <div class="image-text">
+                            <h6>Chang Lingma<span>May 12, 2018</span></h6>
+                            <h5><i class="fa fa-reply-all" aria-hidden="true"></i>Comment Back</h5>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae possimus suscipit esse quia sapiente obcaecati consequuntur dolor sequi adipisci unde!</p>
+                        </div>                                    
+                    </div>                    
+                </div>-->
+                <!--<div class="form-area">
+                    <div class="sec-title">
+                        <h6>Leave A Comment</h6>
+                    </div>
+                    <form id="contact_form" name="contact_form" class="default-form">
+                        <div class="row clearfix">
+                            <div class="col-md-12 col-sm-12 col-xs-12">
+                                <div class="form-group">
+                                    <textarea name="form_message" class="form-control textarea required" placeholder="Your Review"></textarea>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                <div class="form-group">
+                                    <input type="text" name="form_name" class="form-control" value="" placeholder="Your Name" required="">
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                <div class="form-group">
+                                    <input type="email" name="form_email" class="form-control required email" value="" placeholder="Your Email" required="">
+                                </div>
+                            </div>
+                            <div class="col-md-12 col-sm-12 col-xs-12">
+                                <div class="form-group form-bottom">
+                                    <input id="form_botcheck" name="form_botcheck" class="form-control" type="hidden" value="">
+                                    <button class="btn-style-one" type="submit" data-loading-text="Please wait...">Comment</button>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>-->
+</div>
+            <div class="col-md-3 col-sm-12 col-xs-12">
+                <div class="right-side">
+                    <div class="categorise-menu">
+                        <div class="text-title">
+                            <h6>Categories</h6>
+                        </div>
+                        <ul class="categorise-list">
+                            <li><a href="#">2017 Publications <span>(12)</span></a></li>
+                            <li><a href="#">2018 Publications <span>(22)</span></a></li>
+                            <li><a href="#">2019 Publications <span>(18)</span></a></li>
+                            <li><a href="#">2020 Publications <span>(32)</span></a></li>
+                        </ul>                           
+                    </div>
+                    <div class="tag-list">
+                        <div class="text-title">
+                            <h6>Tags</h6>
+                        </div>
+                        <a href="#">India CSR Network</a><a href="#">NGOs</a>
+                        <a href="#">Organization</a><a href="#">Mathura</a>
+                        <a href="#">Vrindavan</a><a href="#">News</a>
+                    </div>
                 </div>
             </div>
-        </div>
+        </div>                
     </div>
 </section>
-
-
-
-<section class="gallery bg-gray">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="section-title text-center">
-                    <h3>Collected Shots
-                        <span></span>
-                    </h3>
-                    <p> </p>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <div class="gallery-item">
-                    <img src="images/about4.jpeg" class="img-responsive" alt="gallery-image">
-                    <a data-fancybox="images" href="images/team/modi.jfif"></a>
-                    <h3></h3>
-                    <p></p>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <div class="gallery-item">
-                    <img src="images/activity2.jpeg" class="img-responsive" alt="gallery-image">
-                    <a data-fancybox="images" href="images/gallery/gallery-02.jpg"></a>
-                    <h3></h3>
-                    <p></p>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <div class="gallery-item">
-                    <img src="images/activity3.jpeg" class="img-responsive" alt="gallery-image">
-                    <a data-fancybox="images" href="images/gallery/gallery-03.jpg"></a>
-                    <h3></h3>
-                    <p> </p>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <div class="gallery-item">
-                    <img src="images/activity1.jpeg" class="img-responsive" alt="gallery-image">
-                    <a data-fancybox="images" href="images/gallery/gallery-04.jpg"></a>
-                    <h3></h3>
-                    <p></p>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <div class="gallery-item">
-                    <img src="images/about2.jpeg" class="img-responsive" alt="gallery-image">
-                    <a data-fancybox="images" href="images/gallery/gallery-05.jpg"></a>
-                    <h3></h3>
-                    <p></p>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <div class="gallery-item">
-                    <img src="images/about3.jpeg" class="img-responsive" alt="gallery-image">
-                    <a data-fancybox="images" href="images/gallery/gallery-06.jpg"></a>
-                    <h3></h3>
-                    <p> </p>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-
+<!-- End Contact Section -->
 
 <!--footer-main-->
 <footer class="footer-main">
@@ -307,7 +341,7 @@
 <!--Scroll to top-->
 <div class="scroll-to-top scroll-to-target" data-target=".header-top">
   <span class="icon fa fa-angle-up"></span>
-</div>  
+</div>
 
 <script src="plugins/jquery.js"></script>
 <script src="plugins/bootstrap.min.js"></script>
@@ -316,6 +350,7 @@
 <script src="plugins/slick/slick.min.js"></script>
 <!-- FancyBox -->
 <script src="plugins/fancybox/jquery.fancybox.min.js"></script>
+
 <script src="plugins/jquery-ui.js"></script>
 <script src="js/script.js"></script>
 </body>
